# swtpm

./: configure.ac
man/man8/: swtpm_setup.pod
samples/: Makefile.am
src/swtpm_bios/: Makefile.am
src/swtpm_cert/: Makefile.am
src/swtpm_ioctl/: Makefile.am
src/swtpm_setup/: Makefile.am  swtpm.c
